2003-03-12  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/list.h :
	* common/list.cpp :

	  - Added a list cmp() function.

	* kb/Makefile.in :
	* kb/consttab.h :
	* kb/consttab.cpp :

	  - Added a list class for constraints.

	* kb/kb.h :
	* kb/kb.cpp :
	* parser/parser.h :

	  - Some cleanup.

	  - Added consttab.


2003-03-11  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/numberlist.cpp :
	* common/stringlist.cpp :

	  - Ensured that dynamic_cast failure will not cause a segfault.

	* kb/kb.cpp :
	* kb/kb.h :

	  - Cleanup.

	  - Separated the encode and decode functions into const, holds,
	    subst and memb.

	* parser/parser.y :

	  - Changed printf() to fprintf(stderr).

	* kb/symtab.cpp :
	* kb/symtab.h :
	* kb/kb.cpp :

	  - Constants true and false are now "built-in" the symbol table.
	    This is to avoid allocating new memory for the constants. Now
	    memory is allocated once for these and only a reference is passed
	    around.

2003-03-10  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.cpp :
	* kb/kb.h :
	* parser/parser.y :

	  - Added initial state list.

	* common/list.cpp :

	  - List debug output will only be displayed when the list is
	    given a name.

	* parser/parser.y :

	  - Added code to store ground expressions.

	  - Duplicate atoms are ignored and only stored once.

2003-03-07  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.cpp :

	  - negate_atom() now works properly.

	  - Fixed decode_atom().

	* parser/parser.y :

	  - Added debug code to print out encoded and decoded ground atoms.

2003-03-06  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/vlad.h :

	  - Added true/false string.

	* kb/kb.h :
	* kb/kb.cpp :

	  - Added decode_atom() function

2003-03-05  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/Makefile.in :
	* common/numberlist.h :
	* common/numberlist.cpp :

	  - Added a number list class to be used initially as ground
	    expressions.

	* samples/atomtest :

	  - Added negative atoms.
