@@ -6,22 +6,10 @@
 #ifndef __VLAD_KB_H
 #define __VLAD_KB_H
 
+#include <atom.h>
 #include <symtab.h>
 #include <consttab.h>
 #include <numberlist.h>
-
-/* atom type */
-#define VLAD_ATOM_CONST  0
-#define VLAD_ATOM_HOLDS  1
-#define VLAD_ATOM_MEMBER 2
-#define VLAD_ATOM_SUBSET 3
-
-/* convenience macros */
-#define VLAD_ATOM_TYPE_VALID(X) (((X) >= 0) && ((X) < 4))
-#define VLAD_ATOM_IS_CONST(X)   ((X) == VLAD_ATOM_CONST)
-#define VLAD_ATOM_IS_HOLDS(X)   ((X) == VLAD_ATOM_HOLDS)
-#define VLAD_ATOM_IS_MEMBER(X)  ((X) == VLAD_ATOM_MEMBER)
-#define VLAD_ATOM_IS_SUBSET(X)  ((X) == VLAD_ATOM_SUBSET)
 
 class kb {
   public :
